[package]
name = "amanah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
cocoon = "0.4.1"
console = "0.15.8"
directories = "5.0.1"
miette = { version = "7.2.0", features = ["fancy"] }
rusqlite = { version = "0.31.0", features = ["serde_json", "bundled"] }
strsim = "0.11.0"
